# Q5_all_projects

./: .gitignore  README.md
fullstak_to_do_app/nextjs_todo-app/: package-lock.json  package.json
fullstak_to_do_app/nextjs_todo-app/app/: page.js
fullstak_to_do_app/poetry_todoApp/: pyproject.toml
fullstak_to_do_app/poetry_todoApp/poetry_todoapp/: main.py
fullstak_to_do_app/poetry_todoApp/tests/: test_main.py
